--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -7,6 +7,39 @@ config DRM_PANEL
 menu "Display Panels"
 	depends on DRM && DRM_PANEL
 
+config DRM_PANEL_NT36672C_TRULY_VDO
+	tristate "NT36672C TRULY vdo mode panel"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for NT36672D DPHY
+	  vdo mode Full HD panel. The panel has a 1080x2400
+	  resolution and uses 24-bits RGB per pixel. It provides a
+	  MIPI DSI interface to host.
+
+config DRM_PANEL_NT36672D_TIANMA_VDO
+	tristate "NT36672D TIANMA vdo mode panel"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for NT36672D DPHY
+	  vdo mode Full HD panel. The panel has a 1080x2340
+	  resolution and uses 24-bits RGB per pixel. It provides a
+	  MIPI DSI interface to host.
+
+config DRM_PANEL_NT36672C_TIANMA_VDO
+	tristate "NT36672C TIANMA vdo mode panel"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for NT36672C DPHY
+	  vdo mode Full HD panel. The panel has a 1080x2340
+	  resolution and uses 24-bits RGB per pixel. It provides a
+	  MIPI DSI interface to host.
+
 config DRM_PANEL_LVDS
 	tristate "Generic LVDS panel driver"
 	depends on OF
@@ -604,28 +637,6 @@ config DRM_PANEL_TIANMA_NT36672C_VDO_144HZ
 	  resolution and uses 24-bits RGB per pixel. It provides a
 	  MIPI DSI interface to host.
 
-config DRM_PANEL_TIANMA_NT36672E_VDO_120HZ_HFP
-	tristate "TIANMA FHD+ vdo mode 120 HZ HFP panel"
-	depends on OF
-	depends on DRM_MIPI_DSI
-	depends on BACKLIGHT_CLASS_DEVICE
-	help
-	  Say Y here if you want to enable support for TIANMA DPHY
-	  vdo mode HFP Full HD Plus 120HZ panel. The panel has a 1080x2408
-	  resolution and uses 24-bits RGB per pixel. It provides a
-	  MIPI DSI interface to host.
-
-config DRM_PANEL_TIANMA_NT36672E_VDO_120HZ_VFP
-	tristate "TIANMA FHD+ vdo mode 120 HZ VFP panel"
-	depends on OF
-	depends on DRM_MIPI_DSI
-	depends on BACKLIGHT_CLASS_DEVICE
-	help
-	  Say Y here if you want to enable support for TIANMA DPHY
-	  vdo mode HFP Full HD Plus 120HZ panel. The panel has a 1080x2408
-	  resolution and uses 24-bits RGB per pixel. It provides a
-	  MIPI DSI interface to host.
-
 config DRM_PANEL_K6853V1_64_ALPHA_VDO_01
 	tristate "K6853V1 alpha phone vdo mode panel"
 	depends on OF
@@ -724,9 +735,3 @@ config DRM_PANEL_SAMSUNG_S68FC01_VDO_AOD
 	  fhdp vdo aod panel. The panel has a 1080x2340 resolution
 	  and uses 24-bits RGB per pixel. It provides a MIPI DSI
 	  interface to host.
-
-config DRM_RT4831A_I2C
-	tristate "rt4831a use i2c control"
-	depends on OF
-	help
-	  Say Y here if you want to enable support for rt4831a.
