--- a/drivers/misc/mediatek/base/power/cm_mgr_v1/Makefile
+++ b/drivers/misc/mediatek/base/power/cm_mgr_v1/Makefile
@@ -32,10 +32,7 @@ ccflags-y += -I$(srctree)/drivers/misc/mediatek/sspm/v1
 ccflags-y += -DUSE_SSMP_VER_V1
 endif
 
-ifeq ($(CONFIG_MACH_MT6781),y)
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/sspm/v2
-ccflags-y += -DUSE_SSMP_VER_V2
-endif
+
 
 ifneq ($(wildcard $(srctree)/drivers/misc/mediatek/met_drv/),)
 ccflags-y += -DMET_SUPPORT
@@ -59,7 +56,6 @@ ccflags-y += \
 	-I$(srctree)/drivers/misc/mediatek/include/mt-plat \
 	-I$(srctree)/drivers/misc/mediatek/include/mt-plat/$(CONFIG_MTK_PLATFORM)/include \
 	-I$(srctree)/drivers/misc/mediatek/include/mt-plat/$(CONFIG_MTK_PLATFORM)/include/mach \
-	-I$(srctree)/drivers/devfreq/helio-dvfsrc-v3/ \
 	-I$(srctree)/drivers/misc/mediatek/sspm/$(CONFIG_MTK_PLATFORM) \
 	-I$(srctree)/include \
 	-I$(srctree)/include/memory/mediatek/ \
@@ -75,24 +71,15 @@ obj-y += mtk_cm_mgr_mt8168.o
 endif
 
 ifeq ($(CONFIG_MACH_MT6893),y)
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/sspm/mt6893
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/base/power/cm_mgr_v1/mt6893
 obj-y += mt6893/
-else ifeq ($(CONFIG_MACH_MT6833),y)
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/sspm/mt6833
+else
+ifeq ($(CONFIG_MACH_MT6833),y)
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/base/power/cm_mgr_v1/mt6833
 obj-y += mt6833/
-else ifeq ($(CONFIG_MACH_MT6877),y)
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/sspm/mt6877
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/base/power/cm_mgr_v1/mt6877
-obj-y += mt6877/
-else ifeq ($(CONFIG_MACH_MT6781),y)
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/sspm/mt6781
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/base/power/cm_mgr_v1/mt6781
-obj-y += mt6781/
 else
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/sspm/$(CONFIG_MTK_PLATFORM)
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/base/power/cm_mgr_v1/$(CONFIG_MTK_PLATFORM)
 obj-y += $(subst ",,$(CONFIG_MTK_PLATFORM))/
+endif
 endif
 
