--- a/drivers/misc/mediatek/leds/Kconfig
+++ b/drivers/misc/mediatek/leds/Kconfig
@@ -22,6 +22,19 @@ config BACKLIGHT_SUPPORT_LP8557
 	  Set n to disable.
 	  For pwm external backlight.
 
+config KTD3136_SUPPORT
+	tristate "Kinetic KTD3136"
+	default n
+	help
+	  Say y here to support Kinetic backlight IC KTD3136.
+
+config LM3697_SUPPORT
+	tristate "TI LM3697"
+	default n
+	select BACKLIGHT_CLASS_DEVICE
+	help
+	Say y here to support TI backlight IC LM3697.
+
 config BACKLIGHT_SUPPORT_LM3697
 	bool "LM3697(DW8832) Support"
 	default n
