--- a/drivers/misc/mediatek/performance/fpsgo_v3/fbt/Makefile
+++ b/drivers/misc/mediatek/performance/fpsgo_v3/fbt/Makefile
@@ -26,10 +26,6 @@ ccflags-y += -DNR_FREQ_CPU=16
 
 ifeq ($(CONFIG_MACH_MT6893),y)
 obj-y += platform/mt6893/fbt_cpu_platform.o
-else ifeq ($(CONFIG_MACH_MT6877),y)
-obj-y += platform/mt6877/fbt_cpu_platform.o
-else ifeq ($(CONFIG_MACH_MT6781),y)
-obj-y += platform/mt6781/fbt_cpu_platform.o
 else
 obj-y += platform/$(MTK_PLATFORM)/fbt_cpu_platform.o
 endif
@@ -38,8 +34,7 @@ obj-y += \
 	src/fbt_cpu.o \
 	src/xgf.o \
 	src/mini_top.o \
-	src/uboost.o \
-	src/thermal_aware.o
+	src/uboost.o
 
 ccflags-y += \
 	-I$(srctree)/include/ \
@@ -52,5 +47,4 @@ ccflags-y += \
 	-I$(MTK_TOP)/base/power/$(MTK_PLATFORM)/ \
 	-I$(FSTB_TOP)/ \
 	-I$(EARA_TOP)/include/ \
-	-I$(srctree)/kernel/ \
-	-I$(MTK_TOP)/thermal/$(MTK_PLATFORM)/inc/
+	-I$(srctree)/kernel/
