--- a/drivers/misc/mediatek/Kconfig
+++ b/drivers/misc/mediatek/Kconfig
@@ -124,6 +124,14 @@ config MTK_BASE_POWER
 	Select if you want to enable MediaTek power
 	management feature.
 
+# BSP.Charge - 2020.11.14 - enable 18W charging start
+config MTK_SOFT_HVDCP_2
+	bool "mtk_soft_hvdcp_2"
+	default n
+	help
+	Select if you want to enable 18W charging.
+# BSP.Charge - 2020.11.14 - enable 18W charging end
+
 source "drivers/misc/mediatek/apusys/Kconfig"
 source "drivers/misc/mediatek/base/power/Kconfig"
 source "drivers/misc/mediatek/hdmi/Kconfig"
@@ -183,17 +191,6 @@ config MTK_SEC_VIDEO_PATH_SUPPORT
 	  MTK_DRM_L1_SUPPORT, MTK_PERSIST_PARTITION_SUPPORT,
 	  MTK_DRM_KEY_MNG_SUPPORT.
 
-config MTK_SVP_ON_MTEE_SUPPORT
-	bool "Enable MTK SVP on MTEE"
-	help
-	  This enable MTK TEE function of Widevine Level1,
-	  relative modules include: DRM, vdec, venc, cmdq, m4u, display,
-	  tplay/DXCC,ssvp, secmem, TEE frameworks, keyinstall, DAPC, MPU,
-	  ION, gralloc,RPMB, DXCC, mediacodec, WFD, MDP.etc
-	  relative options including: MTK_TEE_SUPPORT, MTK_GP_SUPPORT,
-	  MTK_DRM_L1_SUPPORT, MTK_PERSIST_PARTITION_SUPPORT,
-	  MTK_DRM_KEY_MNG_SUPPORT
-
 config MTK_DRM_KEY_MNG_SUPPORT
 	bool "Enable MTK DRM Key Manager Support"
 	depends on MTK_IN_HOUSE_TEE_SUPPORT || TRUSTONIC_TEE_SUPPORT || \
@@ -213,7 +210,6 @@ source "drivers/misc/mediatek/jpeg/Kconfig"
 source "drivers/misc/mediatek/smi/Kconfig"
 source "drivers/misc/mediatek/lcm/Kconfig"
 source "drivers/misc/mediatek/video/Kconfig"
-source "drivers/misc/mediatek/vdec_fmt/Kconfig"
 source "drivers/misc/mediatek/ext_disp/Kconfig"
 source "drivers/misc/mediatek/mmp/Kconfig"
 source "drivers/misc/mediatek/hifi_dsp/Kconfig"
@@ -264,6 +260,7 @@ menu "Security"
 config MTK_TEE_GP_SUPPORT
 	bool "Enable MTK GlobalPlatform support in TEE related modules"
 	default n
+	depends on (TRUSTONIC_TEE_SUPPORT) || (MICROTRUST_TEE_SUPPORT)
 	help
 	  GlobalPlatform defines common/consistent APIs and this option
 	  enables TEE related modules to use GPAPIs. (depending on
@@ -453,6 +450,8 @@ source "drivers/misc/mediatek/mcupm/Kconfig"
 source "drivers/misc/mediatek/udi/Kconfig"
 source "drivers/misc/mediatek/hdmi/Kconfig"
 source "drivers/misc/mediatek/otp/Kconfig"
+# BSP.System - 2020.11.2 - add simtray status
+source "drivers/misc/mediatek/simtray/Kconfig"
 
 endmenu    # Misc
 
