--- a/drivers/power/supply/Kconfig
+++ b/drivers/power/supply/Kconfig
@@ -8,6 +8,14 @@ menuconfig POWER_SUPPLY
 
 if POWER_SUPPLY
 
+# BSP.Charge - 2020.11.14 - enable 18W charging start
+config MTK_SOFT_HVDCP_2
+	bool "mtk_soft_hvdcp_2"
+	default n
+	help
+	  Select if you want to enable 18W charging.
+# BSP.Charge - 2020.11.14 - enable 18W charging end
+
 config POWER_SUPPLY_DEBUG
 	bool "Power supply debug"
 	help
